--- a/Views/AppView.xaml
+++ b/Views/AppView.xaml
@@ -7,7 +7,9 @@
              xmlns:controls="clr-namespace:MaterialDesignSkin.Controls"
              xmlns:sharedLib="clr-namespace:SharedLib;assembly=DataInterfaces"
              xmlns:lex="clr-namespace:Localization.Extensions;assembly=DataInterfaces"
-             mc:Ignorable="d">
+             mc:Ignorable="d"
+             d:DesignWidth="2412.611"
+             d:DesignHeight="1334.528">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition  Width="0.3*" />
@@ -93,7 +95,7 @@
                       ItemsSource="{Binding CategoryFilter.ItemsView}"
                       Padding="0"
                       Margin="0,1,0,1"
-                      ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                      ScrollViewer.VerticalScrollBarVisibility="Auto"
                       SelectedItemChanged="OnSelectedItemChanged"
                       Name="_CATEGORY_TREE">
                 <TreeView.ItemsPanel>
